--- a/app/src/main/res/layout/fragment_season_reward.xml
+++ b/app/src/main/res/layout/fragment_season_reward.xml
@@ -24,19 +24,44 @@
         android:paddingRight="4dp"
         android:paddingBottom="8dp">
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="荣耀战令 S14 赛季"
-            android:textColor="@android:color/white"
-            android:textSize="16dp"
-            android:textStyle="bold" />
+            android:gravity="center_vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="活动结束时间 2019/04/07"
-            android:textColor="@android:color/white" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="荣耀战令 S14 赛季"
+                    android:textColor="@android:color/white"
+                    android:textSize="16dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="活动结束时间 2019/04/07"
+                    android:textColor="@android:color/white" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text='@{"还剩 " + vm.weeks + @string/weeks}'
+                    android:textColor="@android:color/white" />
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="16dp"
+                android:src="@drawable/s14_skin" />
+        </LinearLayout>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -189,6 +214,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:animateLayoutChanges="true"
             android:gravity="center_vertical">
 
             <androidx.cardview.widget.CardView
@@ -226,14 +252,18 @@
                     android:layout_height="wrap_content"
                     android:background="@color/lavenderBlush"
                     android:gravity="center"
-                    android:paddingTop="2dp"
-                    android:paddingBottom="2dp">
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp">
+
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/s14_frame" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:drawableLeft="@mipmap/ic_launcher"
-                        android:gravity="center_vertical"
+                        android:layout_marginLeft="4dp"
                         android:text="典藏进阶卡 " />
 
                     <Switch
@@ -255,12 +285,19 @@
             android:adapter="@{vm.adapter}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
-        <TextView
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:gravity="center_horizontal"
-            android:text="@{vm.result}"
-            android:textColor="@android:color/white" />
+            android:layout_height="50dp"
+            android:layout_marginTop="8dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimary"
+                android:gravity="center"
+                android:padding="8dp"
+                android:text="@{vm.result}"
+                android:textColor="@android:color/white" />
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 </layout>
